--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Highcharts Tutorial</title>
+    <title>Chart Demo</title>
     <!-- <script src="https://code.highcharts.com/highcharts.js"></script> -->
     <script src="./jquery.js"></script>
     <script src="./highcharts.js"></script>
