--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
     <link rel="stylesheet" href="./app.css" />
+
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
   </head>
 
   <body>
